# AoB

./: .gitignore  Battle.cpp  Battle.h  CMakeLists.txt  Makefile.win  README.md  ai.cpp  ai.h  audio.cpp  audio.h  controller.cpp  controller.h  game.cpp  game.h  glut_test.dev  glut_test.layout  log.txt  main.cpp  menu.h  mouse.cpp  mouse.h  stats.cpp  stats.h
glad/: glad.cpp  glad.h
graphic/: GraphicObject.cpp  GraphicObject.h  Picture.cpp  Picture.h  Rectangle.cpp  Rectangle.h  Shader.h  TextObj.cpp  TextObj.h  graphic.h  graphics.cpp  graphics.h  gres.cpp  gres.h  sprite.cpp  sprite.h  texture.cpp  texture.h
object/: AttackType.cpp  AttackTypes.h  BattleGrid.cpp  BattleGrid.h  GameObject.cpp  GameObject.h  GameState.cpp  GameState.h  ProgressBar.cpp  ProgressBar.h  bobject.cpp  bobject.h  character.cpp  character.h  damage.cpp  damage.h  data_types.h  grid.cpp  grid.h  list.cpp  list.h  menu.cpp  menu.h  object.cpp  object.h  ranged.cpp  ranged.h  stats.cpp  stats.h
